# preping_submit

./: .gitignore  README.md  pyproject.toml
experiments/: __init__.py
experiments/appworld/: Makefile  config.py  experiment_utils.py  run_all_parallel.py  run_sequential_adapt.py  run_trajectory_cycle.py  run_trajectory_cycle_playbook_eval.py
experiments/appworld/prompts/: instruction.jinja
experiments/appworld/scripts/: __init__.py  filter_playbook.py  static_doc_playbook_builder.py
servers/: embedding_vllm.sh
src/preping/: embedding_model.py  runner.py
src/preping/appworld/: __init__.py  agent.py  benchmark_adapter.py  env.py  execution.py  memory.py  memory_adapter.py  prompts.py  task_generation.py  task_manager_factory.py  task_source.py
src/preping/appworld/exploration/: __init__.py  base.py  guided.py  random.py
src/preping/core/: __init__.py  benchmark_base.py
src/preping/core/agents/: __init__.py  base.py
src/preping/core/env/: __init__.py  base.py
src/preping/core/interfaces/: __init__.py  benchmark.py  task_generation.py
src/preping/core/memory/: __init__.py  factory.py  interface.py
src/preping/core/memory/playbook/: __init__.py  curator.py  manager.py  prompts.py  reflector.py  (+3 more)
src/preping/core/preping/: __init__.py  config.py  cycle_logging.py  environment_info.py  grounded_environment.py  manager.py  orchestrator.py  proposer.py  proposer_memory.py  records.py  validation.py  validation_policy.py
src/preping/llm/: __init__.py  base.py  constants.py  factory.py  openrouter_utils.py  pricing.py  providers.py  token_tracking.py
(+3 files in other folders)
